--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,51 @@
 #B1A296 - Brownish Grey
 */
 
+body {
+    background-color: #5D5C61;
+    color: white;
+}
+
+p, li {
+    font-size: x-large;
+}
+
 h1 {
     text-align: center;
 }
 
-
-#about-me {
-    padding-left: 100px;
+.nav-link, .nav-link-active {
+    color: white;
+    font-size: x-large;
 }
 
+.nav-bar-brand {
+    align-items: center;
+}
+
+
+#projects.img {
+    width: 100%;
+    height: 100% !important;
+    object-fit: cover;
+}
+
+#nav-main {
+    justify-content: center;
+    background-color: #7395AE;
+
+}
+
+#about-me-info {
+    padding-right: 15%;
+}
+
+#experience {
+    background-color: #557A95;
+    padding: 20px 20px;
+}
+
+#contact {
+    background-color: #B1A296;
+    padding-top: 20px;
+}
