--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ h1 {
 
 #nav-main {
     justify-content: center;
-    background-color: #7395AE;
+    background-color: #B1A296;
 
 }
 
@@ -46,7 +46,7 @@ h1 {
 }
 
 #experience {
-    background-color: #557A95;
+    background-color: #B1A296;
     padding: 20px 20px;
 }
 
