Unable to get fontawesome to work, added images of icons with a tags. Stopped Carousel from auto sliding. Need to add more content to webpage

--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,13 @@ h1 {
     background-color: #B1A296;
     padding-top: 20px;
 }
+
+#socials {
+    background-color: #B1A296;
+    padding: 30px 30px;
+}
+
+#icons {
+    text-align: center;
+}
+
